[gd_scene load_steps=24 format=3 uid="uid://6llvnsvv0jca"]

[ext_resource type="Script" path="res://scene/screen/main_menu.gd" id="1_i2sci"]
[ext_resource type="Texture2D" uid="uid://btg2bkjcv4no0" path="res://resources/logo.png" id="2_67w2v"]
[ext_resource type="Texture2D" uid="uid://hbdmbs7riyf" path="res://resources/heal.png" id="2_g2cnt"]
[ext_resource type="Script" path="res://scene/swipecontrol/swipe_control.gd" id="3_j66i1"]
[ext_resource type="Texture2D" uid="uid://c7c5s002lcrkr" path="res://resources/logo1.jpg" id="4_53yt4"]
[ext_resource type="FontFile" uid="uid://bcax8tpy61quc" path="res://resources/PixelRPG.ttf" id="5_1r080"]
[ext_resource type="Texture2D" uid="uid://ds3mn1q78ksu7" path="res://resources/tutorial.png" id="6_1m6nx"]
[ext_resource type="AudioStream" uid="uid://dpe2h8t7eimxn" path="res://resources/SFX/door.ogg" id="6_o5pve"]
[ext_resource type="Texture2D" uid="uid://byrn183h55peb" path="res://resources/Credit.jpg" id="7_5ppyg"]
[ext_resource type="AudioStream" uid="uid://bq3pg06whg3n6" path="res://resources/VO/mainmenu.ogg" id="8_f487l"]
[ext_resource type="AudioStream" uid="uid://cix4b5vi1e7g2" path="res://resources/VO/tutorial.ogg" id="9_xrrtl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgunm"]

[sub_resource type="Animation" id="Animation_wa82y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lcfc5"]
resource_name = "fade'"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_logo"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfv8g"]
_data = {
"RESET": SubResource("Animation_wa82y"),
"fade'": SubResource("Animation_lcfc5")
}

[sub_resource type="Animation" id="Animation_n1i6d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-100, 0)]
}

[sub_resource type="Animation" id="Animation_bxmo0"]
resource_name = "fadein"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ag5vn"]
resource_name = "fadeout"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-100, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mag3h"]
_data = {
"RESET": SubResource("Animation_n1i6d"),
"fadein": SubResource("Animation_bxmo0"),
"fadeout": SubResource("Animation_ag5vn")
}

[sub_resource type="Animation" id="Animation_3cskj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(145, 75)]
}

[sub_resource type="Animation" id="Animation_5hlwy"]
resource_name = "fadein"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(145, 75), Vector2(45, 75)]
}

[sub_resource type="Animation" id="Animation_35xr2"]
resource_name = "fadeout"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(45, 75), Vector2(145, 75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6eipx"]
_data = {
"RESET": SubResource("Animation_3cskj"),
"fadein": SubResource("Animation_5hlwy"),
"fadeout": SubResource("Animation_35xr2")
}

[node name="MainMenu" type="Node"]
script = ExtResource("1_i2sci")

[node name="Black" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.122846, 0.431525)
texture = ExtResource("2_g2cnt")
centered = false

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(44, 91)
scale = Vector2(0.575, 0.577)
texture = ExtResource("2_67w2v")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(46, 61)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_53yt4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 89.0
offset_bottom = 159.0

[node name="Label" type="Label" parent="Control"]
offset_left = 19.0
offset_top = -0.999999
offset_right = 64.0
offset_bottom = 22.0
scale = Vector2(1.3446, 1.22364)
theme_override_fonts/font = ExtResource("5_1r080")
theme_override_font_sizes/font_size = 6
text = "High Score :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="Control"]
offset_left = 19.0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 33.0
scale = Vector2(1.3446, 1.22364)
theme_override_fonts/font = ExtResource("5_1r080")
theme_override_font_sizes/font_size = 6
text = "88"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwipeScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2(46, 80)
scale = Vector2(4.55045, 7.91994)
shape = SubResource("RectangleShape2D_vgunm")
script = ExtResource("3_j66i1")

[node name="Timer" type="Timer" parent="."]

[node name="Fade" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfv8g")
}

[node name="Tutorial" type="Sprite2D" parent="."]
position = Vector2(-100, 0)
texture = ExtResource("6_1m6nx")
centered = false

[node name="TutorialFade" type="AnimationPlayer" parent="Tutorial"]
libraries = {
"": SubResource("AnimationLibrary_mag3h")
}

[node name="Credit" type="Sprite2D" parent="."]
position = Vector2(145, 75)
scale = Vector2(0.07, 0.07)
texture = ExtResource("7_5ppyg")

[node name="CreditFade" type="AnimationPlayer" parent="Credit"]
libraries = {
"": SubResource("AnimationLibrary_6eipx")
}

[node name="Door" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_o5pve")

[node name="VoiceOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f487l")

[node name="TutorialVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xrrtl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
